samples/_failures_safe/1761688133_eef21f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dcef42e1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_dcef42e1.c:171:5: error: expected expression at end of input
  171 |     int column =
      |     ^~~
./samples/SAFE/__tmp_dcef42e1.c:171:5: error: expected declaration or statement at end of input
